--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   google_maps_flutter: ^2.10.0
   flutter_dash: ^1.0.0
   http: ^1.5.0
+  geolocator: ^10.1.0
+  geocoding: ^3.0.0
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
