--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geolocator: ^10.1.0
   geocoding: ^3.0.0
   permission_handler: ^11.0.1
+  google_polyline_algorithm: ^3.1.0
 
 dev_dependencies:
   flutter_test:
