--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   signalr_core: ^1.1.2
   url_launcher: ^6.3.2
   flutter_launcher_icons: ^0.14.4
+  flutter_stripe: ^12.0.2
+  dotenv: ^4.2.0
 
 
 
@@ -114,6 +116,7 @@ flutter:
   assets:
     - assets/img/
     - assets/images/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
