--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_stripe: ^12.0.2
   dotenv: ^4.2.0
+  audioplayers: ^6.5.1
 
 
 
@@ -117,6 +118,7 @@ flutter:
     - assets/img/
     - assets/images/
     - .env
+    - assets/sounds/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
