--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ dependencies:
   url_launcher: ^6.3.2
   flutter_launcher_icons: ^0.14.4
   flutter_stripe: ^12.0.2
-  dotenv: ^4.2.0
   audioplayers: ^6.5.1
+  flutter_dotenv: ^6.0.0
 
 
 
@@ -117,7 +117,7 @@ flutter:
   assets:
     - assets/img/
     - assets/images/
-    - .env
+    - assets/.env
     - assets/sounds/
   #   - images/a_dot_ham.jpeg
 
