--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about Android versioning at https://developer.android.com/studio/publish/versioning
 # In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
 # Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/servicesFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
@@ -47,6 +47,7 @@ dependencies:
   geolocator: ^10.1.0
   geocoding: ^3.0.0
   permission_handler: ^11.0.1
+  flutter_local_notifications: ^17.2.2
   google_polyline_algorithm: ^3.1.0
   shared_preferences: ^2.5.3
   intl: ^0.20.2
@@ -62,14 +63,17 @@ dependencies:
 
 
 dev_dependencies:
+  android_notification_icons: ^0.0.1
   flutter_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+
+android_notification_icons:
+  image_path: 'assets/images/splash_logo.png'
+  icon_name: 'ic_notification' # optional
+
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
