--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geocoding: ^3.0.0
   permission_handler: ^11.0.1
   flutter_local_notifications: ^17.2.2
+  google_sign_in: ^6.2.1
   google_polyline_algorithm: ^3.1.0
   shared_preferences: ^2.5.3
   intl: ^0.20.2
