--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_stripe: ^12.0.2
   audioplayers: ^6.5.1
   flutter_dotenv: ^6.0.0
+  package_info_plus: ^8.3.1
+  path_provider: ^2.1.5
 
 
 
